--- a/main.html
+++ b/main.html
@@ -40,6 +40,8 @@
         <div id="pos-bottomFull"></div>
     </div>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
     <script>
         const jsonfile = require('jsonfile');
         jsonfile.readFile("apps.json", function (err, obj) {
@@ -49,6 +51,10 @@
                 var script = document.createElement('script'); script.type = 'text/javascript';
                 script.src = appList[i].file;
                 document.body.appendChild(script);
+                var css = document.createElement('link');
+                css.rel = "stylesheet";
+                css.href = appList[i].css; 
+                if(appList[i].css !="None"){document.head.appendChild(css);}
             }
         });
     </script>
