--- a/main.html
+++ b/main.html
@@ -45,6 +45,8 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 
     <script>
+        scriptHTML();
+        function scriptHTML(){
         const jsonfile = require('jsonfile');
         jsonfile.readFile("apps.json", function (err, obj) {
             if (err) console.error(err);
@@ -59,6 +61,7 @@
                 if(appList[i].css !="None"){document.head.appendChild(css);}
             }
         });
+    }
     </script>
 
 
