--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100|Lato:100|Open+Sans:300&display=swap" rel="stylesheet">
-    <title>Magic Mirror</title>
+    <title>Wizard Mirror</title>
     
 
 
