--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="main.css">
-    <link href="https://fonts.googleapis.com/css?family=Catamaran:100|Lato:100|Open+Sans:300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:100|Roboto:100|Open+Sans:300&amp;display=swap" rel="stylesheet">
     <title>Wizard Mirror</title>
     
 
